# connic-bridge

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml  publish.yml
connic_bridge/: __init__.py  agent.py  cli.py
