[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "connic-bridge"
version = "0.1.0"
description = "Connic Bridge - connect private networks to Connic Cloud"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["connic", "bridge", "tunnel", "vpc", "private-network"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
]
dependencies = [
    "websockets>=12.0",
]

[project.urls]
Homepage = "https://connic.co"
Documentation = "https://connic.co/docs/v1/bridge"
Repository = "https://github.com/connic-org/connic-bridge"

[project.scripts]
connic-bridge = "connic_bridge.cli:main"

[tool.setuptools.packages.find]
include = ["connic_bridge*"]
